src/assets/admin/css/style.scss
.lzb-metabox {
    padding-bottom: 19px;

    .description {
        margin-bottom: 10px;
    }

    .disabled {
        pointer-events: none;
        opacity: .5;
    }

    > label {
        display: block;
        margin-top: 0;
        margin-bottom: .5em;
    }
    textarea.lzb-textarea,
    select.lzb-select,
    input.lzb-input {
        width: 100%;
        max-width: 100%;
        padding: 6px 8px;
        margin: 0;
        line-height: 18px;
        color: #32373c;
        border: 1px solid #e2e4e7;
        outline: none;
        outline-offset: -1px;
        box-shadow: 0 0 0 transparent;
        transition: box-shadow .05s linear;

        &:focus {
            color: #191e23;
            outline: 1px solid #008dbe;
            box-shadow: 0 0 0 2px #bfe7f3;
        }

        &[type="checkbox"],
        &[type="radio"] {
            width: auto;
        }

        &[disabled] {
            background: rgba(0, 0, 0, .05);
            opacity: .6;
        }
    }
    select.lzb-select {
        height: 32px;
        line-height: 32px;
    }

    // input group.
    .lzb-metabox-input-group {
        display: flex;
        flex-wrap: wrap;

        > input {
            flex: 1;
            width: auto;
            max-width: 100px;
            height: 28px;
            margin-top: -1px;
            margin-left: -1px;
        }
    }
}


// Gutenberg editor.
.lazyblock {
    display: block;
    padding: 20px;
    background-color: #fff;
    box-shadow: 0 0 0 1px #e6e6e6;

    .lzb-content-title {
        display: flex;
        align-items: center;
        padding: 20px;
        padding-top: 0;
        padding-bottom: 15px;
        margin-top: -5px;
        margin-right: -20px;
        margin-bottom: 20px;
        margin-left: -20px;
        font-size: .8em;
        border-bottom: 1px solid #e6e6e6;

        svg {
            display: block;
        }

        > span {
            height: auto;
            font-size: 1.2em;
            opacity: .8;

            + h6 {
                margin-left: 10px;
            }
        }

        h6 {
            margin: 0;
            font-size: 13px;
            font-weight: 600;
        }
    }

    .lzb-content-title .lzb-content-edit-link {
        margin-left: auto;
        color: inherit;
        opacity: 0;
        transition: .15s opacity ease-in-out;

        svg {
            width: 20px;
            height: 20px;
        }
    }
    &:hover .lzb-content-title .lzb-content-edit-link {
        opacity: .2;

        &:hover {
            opacity: .4;
        }
    }

    // Columns
    .lzb-content-controls {
        display: flex;
        flex-wrap: wrap;
        margin-bottom: -15px;
        margin-left: -15px;

        > div > div {
            margin-bottom: 15px;
            margin-left: 15px;
        }
    }

    .components-base-control__help {
        margin-bottom: 8px;
        font-size: 1em;
        opacity: .6;
    }

    .components-base-control__label .required {
        margin-left: 5px;
    }

    .lzb-preview-server {
        margin-top: 15px;

        .components-spinner {
            position: absolute;
            top: 16px;
            right: 10px;
        }
    }
}

// Select control
.lzb-gutenberg-select select {
    max-width: none;
}

// Date Time Picker control
.lzb-gutenberg-date-time-picker {
    min-width: 230px;

    &:not(.lzb-gutenberg-date-time-picker-allowed-date) {
        .components-datetime__time > fieldset:nth-of-type(1) {
            display: none;
        }
        .components-datetime__time {
            padding-bottom: 0;
        }
    }
    &:not(.lzb-gutenberg-date-time-picker-allowed-time) {
        .components-datetime__time > fieldset:nth-of-type(2) {
            display: none;
        }
    }
}
.lzb-date-time-picker-toggle.components-button {
    padding: 7px 0;
    text-decoration: none;

    svg {
        width: 20px;
        margin-right: 5px;
    }
}

// Color Picker control
.lzb-gutenberg-color {
    .components-base-control__label {
        display: flex;
        align-items: center;
    }
}

// URL picker
.lzb-gutenberg-url {
    position: relative;

    .block-editor-link-control {
        min-width: 100%;
    }

    .block-editor-link-control__settings {
        display: none;
    }

    .block-editor-link-control__search-input {
        margin-bottom: 0;
    }

    .block-editor-link-control__search-input.block-editor-link-control__search-input input[type="text"] {
        width: 100%;
        padding: 6px 4px;
        margin: 0;
        border-color: #8d96a0;

        &:focus {
            color: #191e23;
            border-color: #007cba;
            outline: 2px solid transparent;
            box-shadow: 0 0 0 1px #007cba;
        }
    }

    .block-editor-link-control__search-actions {
        top: 2px;
        right: 2px;

        .components-button {
            height: 30px;
        }
    }

    .block-editor-link-control__search-results-wrapper {
        margin-top: 0;
    }
    .block-editor-link-control__search-results {
        padding-bottom: 0;
        margin-right: -16px;
        margin-left: -16px;
    }

    .block-editor-link-control__search-item.is-current {
        padding: 5px 0;
    }
}

// Gallery and Image controls
.lzb-gutenberg-gallery-wrap,
.lzb-gutenberg-image-wrap {
    position: relative;
}
/* ... */

